improve annotations and introduce startup condition.